--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-xs-12">
-        <form [formGroup]="loginForm"  (ngSubmit)="onSubmit();onCreatePost(this.loginForm.value)">
+        <form [formGroup]="loginForm" (ngSubmit)="onSubmit();onCreatePost(this.loginForm.value)">
             <div class="row">
                 <br><br><br><br><br><br><br>
                 <div>
@@ -14,30 +14,20 @@
                 <div class="col-sm-4 form-group ">
                     <label for="username">Username</label>
                     <br>
-                    <input 
-                    type="text" 
-                    class="form-control" 
-                    formControlName="username"
-                    placeholder="TeamWeikun"
-                    [ngClass]="{ 'is-invalid': submitted && formFieldsGetter.username.errors }">
+                    <input type="text" class="form-control" formControlName="username" placeholder="TeamWeikun" [ngClass]="{ 'is-invalid': submitted && formFieldsGetter.username.errors }">
                     <div *ngIf="submitted && formFieldsGetter.username.errors" class="invalid-feedback">
                         <div *ngIf="formFieldsGetter.username.errors.required">Username is required</div>
                     </div>
                 </div>
                 <div class="col-sm-4"></div>
             </div>
-            
+
             <div class="row">
                 <div class="col-sm-4"></div>
                 <div class="col-sm-4 form-group">
                     <label for="password">Password</label>
-                    
-                    <input 
-                    type="password" 
-                    formControlName="password"
-                    class="form-control" 
-                    placeholder="Password" 
-                    [ngClass]="{ 'is-invalid': submitted && formFieldsGetter.password.errors }
+
+                    <input type="password" formControlName="password" class="form-control" placeholder="Password" [ngClass]="{ 'is-invalid': submitted && formFieldsGetter.password.errors }
                     ">
                     <div *ngIf="submitted && formFieldsGetter.password.errors" class="invalid-feedback">
                         <div *ngIf="formFieldsGetter.password.errors.required">Password is required</div>
@@ -45,11 +35,11 @@
                 </div>
                 <div class="col-sm-4"></div>
             </div>
-           
+
             <div class="row">
                 <div class="col-sm-4"></div>
                 <div class="form-group col-sm-4">
-                    <button [disabled]=!loginForm.valid class="btn btn-danger" type="submit">Login</button>
+                    <button [disabled]=!loginForm.valid class="btn btn-danger" type="submit" (click)="router.navigate(['/resourcepage']); onCreatePost(this.loginForm.value)">Login</button>
 
                     <div class="form-check">
                         <input type="checkbox" class="form-check-input" id="dropdownCheck">
@@ -63,18 +53,13 @@
             <br>
 
         </form>
-                <div class="row">
-                    <div class="col-sm-4"></div>
-                    <div class="col-sm-4">
-                        <button 
-                        id="signupButton" 
-                        class="btn btn-danger" 
-                        type="submit" 
-                        (click)="router.navigate(['/signup']);"
-                        >Sign up
+        <div class="row">
+            <div class="col-sm-4"></div>
+            <div class="col-sm-4">
+                <button id="signupButton" class="btn btn-danger" type="submit" (click)="router.navigate(['/signup']);">Sign up
                     </button>
-                        <a class="dropdown-item" href="#">Forgot password?</a>    
-                    </div>
-                </div>
+                <a class="dropdown-item" href="#">Forgot password?</a>
+            </div>
+        </div>
     </div>
 </div>
