--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,17 +4,17 @@
     <div class="row">
         <div class="col-md-12">
             <app-header></app-header>
-            <router-outlet></router-outlet>
-            <!--
-            <app-login></app-login>
+            
+            
+            <!-- <app-login></app-login>
             <br>
             <br>
             <br>
             <br><br><br><br><br>
-            <app-signup></app-signup>
-
-         <router-outlet></router-outlet> 
-        -->
+            <app-signup></app-signup> -->
+            <router-outlet></router-outlet>
+       
+       
         </div>
     </div>
 </div>
