--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-xs-12">
-        <form [formGroup]="loginForm" (ngSubmit)="onSubmit();onCreatePost(this.loginForm.value)">
+        <form [formGroup]="loginForm" (ngSubmit)="onSubmit();onCreatePost()" >
             <div class="row">
                 <br><br><br><br><br><br><br>
                 <div>
@@ -35,11 +35,12 @@
                 </div>
                 <div class="col-sm-4"></div>
             </div>
+            
 
             <div class="row">
                 <div class="col-sm-4"></div>
                 <div class="form-group col-sm-4">
-                    <button [disabled]=!loginForm.valid class="btn btn-danger" type="submit" (click)="router.navigate(['/resourcepage']); onCreatePost(this.loginForm.value)">Login</button>
+                    <button [disabled]=!loginForm.valid class="btn btn-danger" type="submit" >Login</button>
 
                     <div class="form-check">
                         <input type="checkbox" class="form-check-input" id="dropdownCheck">
